# pyMSHBM

./: LICENSE  OPTIMIZATION_PLAN.md  problems_to_fix.md  pyproject.toml
docs/: pipeline_guide.md
src/pymshbm/: types.py
src/pymshbm/cerebellum/: cifti_convert.py  params.py  parcellation.py  surf_gifti.py  vol2surf_fc.py  wta.py
src/pymshbm/cli/: extract_results.py  wrapper.py
src/pymshbm/core/: extract_results.py  group_priors.py  individual.py  profiles.py  validation.py
src/pymshbm/io/: cifti.py  freesurfer.py  mat_interop.py  profile_lists.py  readers.py  writers.py
src/pymshbm/math/: clustering.py  correlation.py  mrf.py  vmf.py
src/pymshbm/pipeline/: label_convert.py  single_subject.py  training.py  wrapper.py
tests/: conftest.py
tests/test_cerebellum/: test_parcellation.py  test_vol2surf_fc.py  test_wta.py
tests/test_cli/: test_extract_results_cli.py  test_wrapper_cli.py
tests/test_core/: test_extract_mshbm_result_sub.py  test_extract_results.py  test_group_priors.py  test_individual.py  test_profiles.py
tests/test_io/: test_cifti.py  test_freesurfer.py  test_mat_interop.py  test_profile_lists.py  test_readers.py  test_writers.py
tests/test_math/: test_clustering.py  test_correlation.py  test_mrf.py  test_vmf.py
tests/test_pipeline/: test_training.py  test_wrapper.py
